JC-BACK- Swagger GET Event
